tools/parser/latparse.output
Rules useless in parser due to conflicts

  141 clase_sentencia: RETORNO expression

  145 clase_sentencias: error statement_list


State 2 conflicts: 1 reduce/reduce
State 11 conflicts: 3 shift/reduce
State 19 conflicts: 4 shift/reduce
State 31 conflicts: 1 reduce/reduce
State 38 conflicts: 48 reduce/reduce
State 49 conflicts: 2 reduce/reduce
State 66 conflicts: 48 reduce/reduce
State 73 conflicts: 1 shift/reduce, 26 reduce/reduce
State 78 conflicts: 1 reduce/reduce
State 98 conflicts: 3 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 134 conflicts: 3 shift/reduce
State 144 conflicts: 2 shift/reduce
State 145 conflicts: 2 shift/reduce
State 147 conflicts: 2 shift/reduce
State 159 conflicts: 1 shift/reduce
State 173 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 175 conflicts: 1 shift/reduce
State 176 conflicts: 1 shift/reduce
State 177 conflicts: 1 shift/reduce
State 178 conflicts: 1 shift/reduce
State 179 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce
State 181 conflicts: 1 shift/reduce
State 182 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce
State 184 conflicts: 1 shift/reduce
State 185 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 188 conflicts: 1 shift/reduce
State 189 conflicts: 1 shift/reduce
State 208 conflicts: 6 reduce/reduce
State 211 conflicts: 5 reduce/reduce
State 220 conflicts: 1 shift/reduce
State 243 conflicts: 18 shift/reduce
State 244 conflicts: 1 shift/reduce
State 254 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 constant_expression: NUMERICO
    2                    | CADENA

    3 primary_expression: IDENTIFICADOR
    4                   | VERDADERO
    5                   | FALSO
    6                   | NULO

    7 unary_expression: '-' expression
    8                 | '+' expression

    9 multiplicative_expression: expression '^' expression
   10                          | expression EXPONENTE expression
   11                          | expression '*' expression
   12                          | expression '/' expression
   13                          | expression '%' expression

   14 additive_expression: expression '-' expression
   15                    | expression '+' expression

   16 relational_expression: expression MAYOR_QUE expression
   17                      | expression MENOR_QUE expression
   18                      | expression MAYOR_IGUAL expression
   19                      | expression MENOR_IGUAL expression

   20 equality_expression: expression DIFERENTE expression
   21                    | expression IGUAL_LOGICO expression
   22                    | expression REGEX expression

   23 logical_not_expression: '!' expression

   24 logical_and_expression: expression Y_LOGICO expression

   25 logical_or_expression: expression O_LOGICO expression

   26 ternary_expression: expression '?' expression ':' expression

   27 concat_expression: expression CONCATENAR expression

   28 expression: '(' expression ')'
   29           | constant_expression
   30           | primary_expression
   31           | unary_expression
   32           | multiplicative_expression
   33           | additive_expression
   34           | relational_expression
   35           | equality_expression
   36           | logical_not_expression
   37           | logical_and_expression
   38           | logical_or_expression
   39           | concat_expression
   40           | function_call
   41           | list_new
   42           | dict_new
   43           | variable_access
   44           | function_anonymous
   45           | ternary_expression
   46           | incdec_statement
   47           | VAR_ARGS

   48 program: ε
   49        | statement_list

   50 statement_list: statement statement_list
   51               | statement
   52               | error statement_list

   53 statement: declaration
   54          | global_declaration
   55          | selection_statement
   56          | iteration_statement
   57          | jump_statement
   58          | function_definition
   59          | function_call
   60          | incdec_statement
   61          | jump_loop
   62          | goto_etiqueta
   63          | clase_declaracion

   64 incdec_statement: variable_access INCREMENTO
   65                 | variable_access DECREMENTO

   66 variable_access: IDENTIFICADOR
   67                | field_designator
   68                | function_call

   69 field_designator: variable_access ATRIBUTO IDENTIFICADOR
   70                 | variable_access '[' expression ']'

   71 global_declaration: GLOBAL declaration
   72                   | GLOBAL function_definition

   73 declaration: variable_access '=' expression
   74            | variable_access CONCATENAR_IGUAL expression
   75            | variable_access MAS_IGUAL expression
   76            | variable_access MENOS_IGUAL expression
   77            | variable_access POR_IGUAL expression
   78            | variable_access ENTRE_IGUAL expression
   79            | variable_access MODULO_IGUAL expression
   80            | parameter_list '=' argument_expression_list
   81            | variable_access '[' expression ']' '=' expression

   82 labeled_statements: labeled_statement_case labeled_statements
   83                   | labeled_statement_case
   84                   | labeled_statement_default

   85 labeled_statement_case: CASO labeled_statement_case_case statement_list

   86 labeled_statement_case_case: constant_expression ':'
   87                            | constant_expression ':' CASO labeled_statement_case_case

   88 labeled_statement_default: DEFECTO ':' statement_list

   89 selection_statement: SI expression statement_list FIN
   90                    | SI expression statement_list SINO statement_list FIN
   91                    | SI expression statement_list osi_statements FIN
   92                    | ELEGIR expression labeled_statements FIN

   93 osi_statements: osi_statement
   94               | osi_statements osi_statement

   95 osi_statement: O_SI expression statement_list
   96              | O_SI expression statement_list SINO statement_list
   97              | O_SI expression statement_list osi_statements

   98 iteration_statement: MIENTRAS expression statement_list FIN
   99                    | REPETIR statement_list HASTA expression
  100                    | DESDE '(' declaration ';' expression ';' statement ')' statement_list FIN
  101                    | PARA IDENTIFICADOR EN RANGO '(' expression ')' statement_list FIN
  102                    | PARA IDENTIFICADOR EN RANGO '(' expression ',' expression ')' statement_list FIN
  103                    | PARA IDENTIFICADOR EN RANGO '(' expression ',' expression ',' expression ')' statement_list FIN

  104 goto_etiqueta: IDENTIFICADOR ':'

  105 jump_statement: RETORNO expression
  106               | RETORNO argument_expression_list
  107               | IR IDENTIFICADOR

  108 jump_loop: ROMPER
  109          | CONTINUAR

  110 function_definition: FUNCION IDENTIFICADOR '(' parameter_list ')' statement_list FIN

  111 function_anonymous: FUNCION '(' parameter_list ')' statement_list FIN

  112 function_call: variable_access '(' argument_expression_list ')'

  113 argument_expression_list: ε
  114                         | expression
  115                         | expression ',' argument_expression_list

  116 parameter_list: ε
  117               | IDENTIFICADOR
  118               | VAR_ARGS
  119               | parameter_list ',' IDENTIFICADOR
  120               | parameter_list ',' VAR_ARGS

  121 list_new: '[' list_items ']'

  122 list_items: ε
  123           | expression
  124           | expression ',' list_items

  125 dict_new: '{' dict_items '}'

  126 dict_items: ε
  127           | dict_item
  128           | dict_items ',' dict_item

  129 dict_item: ε
  130          | expression ':' expression

  131 clase_propiedad: IDENTIFICADOR '=' expression

  132 clase_propiedades: clase_propiedad clase_propiedades
  133                  | clase_propiedad
  134                  | error statement_list

  135 clase_funcion: FUNCION IDENTIFICADOR '(' parameter_list ')' statement_list FIN

  136 clase_funciones: clase_funcion clase_funciones
  137                | clase_funcion
  138                | error statement_list

  139 clase_sentencia: clase_propiedades
  140                | clase_funciones
  141                | RETORNO expression
  142                | RETORNO argument_expression_list

  143 clase_sentencias: clase_sentencia clase_sentencias
  144                 | clase_sentencia
  145                 | error statement_list

  146 clase_declaracion: CLASE IDENTIFICADOR clase_sentencias FIN


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 23
    '%' (37) 13
    '(' (40) 28 100 101 102 103 110 111 112 135
    ')' (41) 28 100 101 102 103 110 111 112 135
    '*' (42) 11
    '+' (43) 8 15
    ',' (44) 102 103 115 119 120 124 128
    '-' (45) 7 14
    '/' (47) 12
    ':' (58) 26 86 87 88 104 130
    ';' (59) 100
    '=' (61) 73 80 81 131
    '?' (63) 26
    '[' (91) 70 81 121
    ']' (93) 70 81 121
    '^' (94) 9
    '{' (123) 125
    '}' (125) 125
    error (256) 52 134 138 145
    NUMERICO <node> (258) 1
    CADENA <node> (259) 2
    IDENTIFICADOR <node> (260) 3 66 69 101 102 103 104 107 110 117 119 131 135 146
    VAR_ARGS <node> (261) 47 118 120
    SI (262) 89 90 91
    O_SI (263) 95 96 97
    FIN (264) 89 90 91 92 98 100 101 102 103 110 111 135 146
    SINO (265) 90 96
    MIENTRAS (266) 98
    REPETIR (267) 99
    ROMPER (268) 108
    CONTINUAR (269) 109
    HASTA (270) 99
    FUNCION (271) 110 111 135
    DESDE (272) 100
    RETORNO (273) 105 106 141 142
    ELEGIR (274) 92
    CASO (275) 85 87
    DEFECTO (276) 88
    ATRIBUTO (277) 69
    VERDADERO (278) 4
    FALSO (279) 5
    NULO (280) 6
    EXPONENTE (281) 10
    PARA (282) 101 102 103
    EN (283) 101 102 103
    RANGO (284) 101 102 103
    IR (285) 107
    MAYOR_QUE (286) 16
    MENOR_QUE (287) 17
    MAYOR_IGUAL (288) 18
    MENOR_IGUAL (289) 19
    IGUAL_LOGICO (290) 21
    DIFERENTE (291) 20
    Y_LOGICO (292) 24
    O_LOGICO (293) 25
    INCREMENTO (294) 64
    DECREMENTO (295) 65
    CONCATENAR (296) 27
    CONCATENAR_IGUAL (297) 74
    MAS_IGUAL (298) 75
    MENOS_IGUAL (299) 76
    POR_IGUAL (300) 77
    ENTRE_IGUAL (301) 78
    MODULO_IGUAL (302) 79
    REGEX (303) 22
    GLOBAL (304) 71 72
    CLASE (305) 146


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    constant_expression <node> (70)
        on left: 1 2
        on right: 29 86 87
    primary_expression <node> (71)
        on left: 3 4 5 6
        on right: 30
    unary_expression <node> (72)
        on left: 7 8
        on right: 31
    multiplicative_expression <node> (73)
        on left: 9 10 11 12 13
        on right: 32
    additive_expression <node> (74)
        on left: 14 15
        on right: 33
    relational_expression <node> (75)
        on left: 16 17 18 19
        on right: 34
    equality_expression <node> (76)
        on left: 20 21 22
        on right: 35
    logical_not_expression <node> (77)
        on left: 23
        on right: 36
    logical_and_expression <node> (78)
        on left: 24
        on right: 37
    logical_or_expression <node> (79)
        on left: 25
        on right: 38
    ternary_expression <node> (80)
        on left: 26
        on right: 45
    concat_expression <node> (81)
        on left: 27
        on right: 39
    expression <node> (82)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 70 73 74 75 76 77 78 79 81 89 90 91 92 95 96 97 98 99 100 101 102 103 105 114 115 123 124 130 131 141
    program (83)
        on left: 48 49
        on right: 0
    statement_list <node> (84)
        on left: 50 51 52
        on right: 49 50 52 85 88 89 90 91 95 96 97 98 99 100 101 102 103 110 111 134 135 138 145
    statement <node> (85)
        on left: 53 54 55 56 57 58 59 60 61 62 63
        on right: 50 51 100
    incdec_statement <node> (86)
        on left: 64 65
        on right: 46 60
    variable_access <node> (87)
        on left: 66 67 68
        on right: 43 64 65 69 70 73 74 75 76 77 78 79 81 112
    field_designator <node> (88)
        on left: 69 70
        on right: 67
    global_declaration <node> (89)
        on left: 71 72
        on right: 54
    declaration <node> (90)
        on left: 73 74 75 76 77 78 79 80 81
        on right: 53 71 100
    labeled_statements <node> (91)
        on left: 82 83 84
        on right: 82 92
    labeled_statement_case <node> (92)
        on left: 85
        on right: 82 83
    labeled_statement_case_case <node> (93)
        on left: 86 87
        on right: 85 87
    labeled_statement_default <node> (94)
        on left: 88
        on right: 84
    selection_statement <node> (95)
        on left: 89 90 91 92
        on right: 55
    osi_statements <node> (96)
        on left: 93 94
        on right: 91 94 97
    osi_statement <node> (97)
        on left: 95 96 97
        on right: 93 94
    iteration_statement <node> (98)
        on left: 98 99 100 101 102 103
        on right: 56
    goto_etiqueta <node> (99)
        on left: 104
        on right: 62
    jump_statement <node> (100)
        on left: 105 106 107
        on right: 57
    jump_loop <node> (101)
        on left: 108 109
        on right: 61
    function_definition <node> (102)
        on left: 110
        on right: 58 72
    function_anonymous <node> (103)
        on left: 111
        on right: 44
    function_call <node> (104)
        on left: 112
        on right: 40 59 68
    argument_expression_list <node> (105)
        on left: 113 114 115
        on right: 80 106 112 115 142
    parameter_list <node> (106)
        on left: 116 117 118 119 120
        on right: 80 110 111 119 120 135
    list_new <node> (107)
        on left: 121
        on right: 41
    list_items <node> (108)
        on left: 122 123 124
        on right: 121 124
    dict_new <node> (109)
        on left: 125
        on right: 42
    dict_items <node> (110)
        on left: 126 127 128
        on right: 125 128
    dict_item <node> (111)
        on left: 129 130
        on right: 127 128
    clase_propiedad <node> (112)
        on left: 131
        on right: 132 133
    clase_propiedades <node> (113)
        on left: 132 133 134
        on right: 132 139
    clase_funcion <node> (114)
        on left: 135
        on right: 136 137
    clase_funciones <node> (115)
        on left: 136 137 138
        on right: 136 140
    clase_sentencia <node> (116)
        on left: 139 140 141 142
        on right: 143 144
    clase_sentencias <node> (117)
        on left: 143 144 145
        on right: 143 146
    clase_declaracion <node> (118)
        on left: 146
        on right: 63


State 0

    0 $accept: • program $end
   48 program: ε •  [$end]
   49        | • statement_list
   50 statement_list: • statement statement_list
   51               | • statement
   52               | • error statement_list
   53 statement: • declaration
   54          | • global_declaration
   55          | • selection_statement
   56          | • iteration_statement
   57          | • jump_statement
   58          | • function_definition
   59          | • function_call
   60          | • incdec_statement
   61          | • jump_loop
   62          | • goto_etiqueta
   63          | • clase_declaracion
   64 incdec_statement: • variable_access INCREMENTO
   65                 | • variable_access DECREMENTO
   66 variable_access: • IDENTIFICADOR
   67                | • field_designator
   68                | • function_call
   69 field_designator: • variable_access ATRIBUTO IDENTIFICADOR
   70                 | • variable_access '[' expression ']'
   71 global_declaration: • GLOBAL declaration
   72                   | • GLOBAL function_definition
   73 declaration: • variable_access '=' expression
   74            | • variable_access CONCATENAR_IGUAL expression
   75            | • variable_access MAS_IGUAL expression
   76            | • variable_access MENOS_IGUAL expression
   77            | • variable_access POR_IGUAL expression
   78            | • variable_access ENTRE_IGUAL expression
   79            | • variable_access MODULO_IGUAL expression
   80            | • parameter_list '=' argument_expression_list
   81            | • variable_access '[' expression ']' '=' expression
   89 selection_statement: • SI expression statement_list FIN
   90                    | • SI expression statement_list SINO statement_list FIN
   91                    | • SI expression statement_list osi_statements FIN
   92                    | • ELEGIR expression labeled_statements FIN
   98 iteration_statement: • MIENTRAS expression statement_list FIN
   99                    | • REPETIR statement_list HASTA expression
  100                    | • DESDE '(' declaration ';' expression ';' statement ')' statement_list FIN
  101                    | • PARA IDENTIFICADOR EN RANGO '(' expression ')' statement_list FIN
  102                    | • PARA IDENTIFICADOR EN RANGO '(' expression ',' expression ')' statement_list FIN
  103                    | • PARA IDENTIFICADOR EN RANGO '(' expression ',' expression ',' expression ')' statement_list FIN
  104 goto_etiqueta: • IDENTIFICADOR ':'
  105 jump_statement: • RETORNO expression
  106               | • RETORNO argument_expression_list
  107               | • IR IDENTIFICADOR
  108 jump_loop: • ROMPER
  109          | • CONTINUAR
  110 function_definition: • FUNCION IDENTIFICADOR '(' parameter_list ')' statement_list FIN
  112 function_call: • variable_access '(' argument_expression_list ')'
  116 parameter_list: ε •  ['=', ',']
  117               | • IDENTIFICADOR
  118               | • VAR_ARGS
  119               | • parameter_list ',' IDENTIFICADOR
  120               | • parameter_list ',' VAR_ARGS
  146 clase_declaracion: • CLASE IDENTIFICADOR clase_sentencias FIN

    error          shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    VAR_ARGS       shift, and go to state 3
    SI             shift, and go to state 4
    MIENTRAS       shift, and go to state 5
    REPETIR        shift, and go to state 6
    ROMPER         shift, and go to state 7
    CONTINUAR      shift, and go to state 8
    FUNCION        shift, and go to state 9
    DESDE          shift, and go to state 10
    RETORNO        shift, and go to state 11
    ELEGIR         shift, and go to state 12
    PARA           shift, and go to state 13
    IR             shift, and go to state 14
    GLOBAL         shift, and go to state 15
    CLASE          shift, and go to state 16

    $end  reduce using rule 48 (program)
    '='   reduce using rule 116 (parameter_list)
    ','   reduce using rule 116 (parameter_list)

    program              go to state 17
    statement_list       go to state 18
    statement            go to state 19
    incdec_statement     go to state 20
    variable_access      go to state 21
    field_designator     go to state 22
    global_declaration   go to state 23
    declaration          go to state 24
    selection_statement  go to state 25
    iteration_statement  go to state 26
    goto_etiqueta        go to state 27
    jump_statement       go to state 28
    jump_loop            go to state 29
    function_definition  go to state 30
    function_call        go to state 31
    parameter_list       go to state 32
    clase_declaracion    go to state 33


State 1

   50 statement_list: • statement statement_list
   51               | • statement
   52               | • error statement_list
   52               | error • statement_list
   53 statement: • declaration
   54          | • global_declaration
   55          | • selection_statement
   56          | • iteration_statement
   57          | • jump_statement
   58          | • function_definition
   59          | • function_call
   60          | • incdec_statement
   61          | • jump_loop
   62          | • goto_etiqueta
   63          | • clase_declaracion
   64 incdec_statement: • variable_access INCREMENTO
   65                 | • variable_access DECREMENTO
   66 variable_access: • IDENTIFICADOR
   67                | • field_designator
   68                | • function_call
   69 field_designator: • variable_access ATRIBUTO IDENTIFICADOR
   70                 | • variable_access '[' expression ']'
   71 global_declaration: • GLOBAL declaration
   72                   | • GLOBAL function_definition
   73 declaration: • variable_access '=' expression
   74            | • variable_access CONCATENAR_IGUAL expression
   75            | • variable_access MAS_IGUAL expression
   76            | • variable_access MENOS_IGUAL expression
   77            | • variable_access POR_IGUAL expression
   78            | • variable_access ENTRE_IGUAL expression
   79            | • variable_access MODULO_IGUAL expression
   80            | • parameter_list '=' argument_expression_list
   81            | • variable_access '[' expression ']' '=' expression
   89 selection_statement: • SI expression statement_list FIN
   90                    | • SI expression statement_list SINO statement_list FIN
   91                    | • SI expression statement_list osi_statements FIN
   92                    | • ELEGIR expression labeled_statements FIN
   98 iteration_statement: • MIENTRAS expression statement_list FIN
   99                    | • REPETIR statement_list HASTA expression
  100                    | • DESDE '(' declaration ';' expression ';' statement ')' statement_list FIN
  101                    | • PARA IDENTIFICADOR EN RANGO '(' expression ')' statement_list FIN
  102                    | • PARA IDENTIFICADOR EN RANGO '(' expression ',' expression ')' statement_list FIN
  103                    | • PARA IDENTIFICADOR EN RANGO '(' expression ',' expression ',' expression ')' statement_list FIN
  104 goto_etiqueta: • IDENTIFICADOR ':'
  105 jump_statement: • RETORNO expression
  106               | • RETORNO argument_expression_list
  107               | • IR IDENTIFICADOR
  108 jump_loop: • ROMPER
  109          | • CONTINUAR
  110 function_definition: • FUNCION IDENTIFICADOR '(' parameter_list ')' statement_list FIN
  112 function_call: • variable_access '(' argument_expression_list ')'
  116 parameter_list: ε •  ['=', ',']
  117               | • IDENTIFICADOR
  118               | • VAR_ARGS
  119               | • parameter_list ',' IDENTIFICADOR
  120               | • parameter_list ',' VAR_ARGS
  146 clase_declaracion: • CLASE IDENTIFICADOR clase_sentencias FIN

    error          shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    VAR_ARGS       shift, and go to state 3
    SI             shift, and go to state 4
    MIENTRAS       shift, and go to state 5
    REPETIR        shift, and go to state 6
    ROMPER         shift, and go to state 7
    CONTINUAR      shift, and go to state 8
    FUNCION        shift, and go to state 9
    DESDE          shift, and go to state 10
    RETORNO        shift, and go to state 11
    ELEGIR         shift, and go to state 12
    PARA           shift, and go to state 13
    IR             shift, and go to state 14
    GLOBAL         shift, and go to state 15
    CLASE          shift, and go to state 16

    '='  reduce using rule 116 (parameter_list)
    ','  reduce using rule 116 (parameter_list)

    statement_list       go to state 34
    statement            go to state 19
    incdec_statement     go to state 20
    variable_access      go to state 21
    field_designator     go to state 22
    global_declaration   go to state 23
    declaration          go to state 24
    selection_statement  go to state 25
    iteration_statement  go to state 26
    goto_etiqueta        go to state 27
    jump_statement       go to state 28
    jump_loop            go to state 29
    function_definition  go to state 30
    function_call        go to state 31
    parameter_list       go to state 32
    clase_declaracion    go to state 33


State 2

   66 variable_access: IDENTIFICADOR •  [ATRIBUTO, INCREMENTO, DECREMENTO, CONCATENAR_IGUAL, MAS_IGUAL, MENOS_IGUAL, POR_IGUAL, ENTRE_IGUAL, MODULO_IGUAL, '=', '(', '[']
  104 goto_etiqueta: IDENTIFICADOR • ':'
  117 parameter_list: IDENTIFICADOR •  ['=', ',']

    ':'  shift, and go to state 35

    '='       reduce using rule 66 (variable_access)
    '='       [reduce using rule 117 (parameter_list)]
    ','       reduce using rule 117 (parameter_list)
    $default  reduce using rule 66 (variable_access)

    reduce/reduce conflict on token '=':
       66 variable_access: IDENTIFICADOR •
      117 parameter_list: IDENTIFICADOR •
      Example: IDENTIFICADOR • '=' expression
      First reduce derivation
        declaration
        ↳ 73: variable_access       '=' expression
              ↳ 66: IDENTIFICADOR •
      Second reduce derivation
        declaration
        ↳ 80: parameter_list         '=' argument_expression_list
              ↳ 117: IDENTIFICADOR •     ↳ 114: expression



State 3

  118 parameter_list: VAR_ARGS •

    $default  reduce using rule 118 (parameter_list)


State 4

    1 constant_expression: • NUMERICO
    2                    | • CADENA
    3 primary_expression: • IDENTIFICADOR
    4                   | • VERDADERO
    5                   | • FALSO
    6                   | • NULO
    7 unary_expression: • '-' expression
    8                 | • '+' expression
    9 multiplicative_expression: • expression '^' expression
   10                          | • expression EXPONENTE expression
   11                          | • expression '*' expression
   12                          | • expression '/' expression
   13                          | • expression '%' expression
   14 additive_expression: • expression '-' expression
   15                    | • expression '+' expression
   16 relational_expression: • expression MAYOR_QUE expression
   17                      | • expression MENOR_QUE expression
   18                      | • expression MAYOR_IGUAL expression
   19                      | • expression MENOR_IGUAL expression
   20 equality_expression: • expression DIFERENTE expression
   21                    | • expression IGUAL_LOGICO expression
   22                    | • expression REGEX expression
   23 logical_not_expression: • '!' expression
   24 logical_and_expression: • expression Y_LOGICO expression
   25 logical_or_expression: • expression O_LOGICO expression
   26 ternary_expression: • expression '?' expression ':' expression
   27 concat_expression: • expression CONCATENAR expression
   28 expression: • '(' expression ')'
   29           | • constant_expression
   30           | • primary_expression
   31           | • unary_expression
   32           | • multiplicative_expression
   33           | • additive_expression
   34           | • relational_expression
   35           | • equality_expression
   36           | • logical_not_expression
   37           | • logical_and_expression
   38           | • logical_or_expression
   39           | • concat_expression
   40           | • function_call
   41           | • list_new
   42           | • dict_new
   43           | • variable_access
   44           | • function_anonymous
   45           | • ternary_expression
   46           | • incdec_statement
   47           | • VAR_ARGS
   64 incdec_statement: • variable_access INCREMENTO
   65                 | • variable_access DECREMENTO
   66 variable_access: • IDENTIFICADOR
   67                | • field_designator
   68                | • function_call
   69 field_designator: • variable_access ATRIBUTO IDENTIFICADOR
   70                 | • variable_access '[' expression ']'
   89 selection_statement: SI • expression statement_list FIN
   90                    | SI • expression statement_list SINO statement_list FIN
   91                    | SI • expression statement_list osi_statements FIN
  111 function_anonymous: • FUNCION '(' parameter_list ')' statement_list FIN
  112 function_call: • variable_access '(' argument_expression_list ')'
  121 list_new: • '[' list_items ']'
  125 dict_new: • '{' dict_items '}'

    NUMERICO       shift, and go to state 36
    CADENA         shift, and go to state 37
    IDENTIFICADOR  shift, and go to state 38
    VAR_ARGS       shift, and go to state 39
    FUNCION        shift, and go to state 40
    VERDADERO      shift, and go to state 41
    FALSO          shift, and go to state 42
    NULO           shift, and go to state 43
    '+'            shift, and go to state 44
    '-'            shift, and go to state 45
    '!'            shift, and go to state 46
    '('            shift, and go to state 47
    '['            shift, and go to state 48
    '{'            shift, and go to state 49

    constant_expression        go to state 50
    primary_expression         go to state 51
    unary_expression           go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_not_expression     go to state 57
    logical_and_expression     go to state 58
    logical_or_expression      go to state 59
    ternary_expression         go to state 60
    concat_expression          go to state 61
    expression                 go to state 62
    incdec_statement           go to state 63
    variable_access            go to state 64
    field_designator           go to state 22
    function_anonymous         go to state 65
    function_call              go to state 66
    list_new                   go to state 67
    dict_new                   go to state 68


State 5

    1 constant_expression: • NUMERICO
    2                    | • CADENA
    3 primary_expression: • IDENTIFICADOR
    4                   | • VERDADERO
    5                   | • FALSO
    6                   | • NULO
    7 unary_expression: • '-' expression
    8                 | • '+' expression
    9 multiplicative_expression: • expression '^' expression
   10                          | • expression EXPONENTE expression
   11                          | • expression '*' expression
   12                          | • expression '/' expression
   13                          | • expression '%' expression
   14 additive_expression: • expression '-' expression
   15                    | • expression '+' expression
   16 relational_expression: • expression MAYOR_QUE expression
   17                      | • expression MENOR_QUE expression
   18                      | • expression MAYOR_IGUAL expression
   19                      | • expression MENOR_IGUAL expression
   20 equality_expression: • expression DIFERENTE expression
   21                    | • expression IGUAL_LOGICO expression
   22                    | • expression REGEX expression
   23 logical_not_expression: • '!' expression
   24 logical_and_expression: • expression Y_LOGICO expression
   25 logical_or_expression: • expression O_LOGICO expression
   26 ternary_expression: • expression '?' expression ':' expression
   27 concat_expression: • expression CONCATENAR expression
   28 expression: • '(' expression ')'
   29           | • constant_expression
   30           | • primary_expression
   31           | • unary_expression
   32           | • multiplicative_expression
   33           | • additive_expression
   34           | • relational_expression
   35           | • equality_expression
   36           | • logical_not_expression
   37           | • logical_and_expression
   38           | • logical_or_expression
   39           | • concat_expression
   40           | • function_call
   41           | • list_new
   42           | • dict_new
   43           | • variable_access
   44           | • function_anonymous
   45           | • ternary_expression
   46           | • incdec_statement
   47           | • VAR_ARGS
   64 incdec_statement: • variable_access INCREMENTO
   65                 | • variable_access DECREMENTO
   66 variable_access: • IDENTIFICADOR
   67                | • field_designator
   68                | • function_call
   69 field_designator: • variable_access ATRIBUTO IDENTIFICADOR
   70                 | • variable_access '[' expression ']'
   98 iteration_statement: MIENTRAS • expression statement_list FIN
  111 function_anonymous: • FUNCION '(' parameter_list ')' statement_list FIN
  112 function_call: • variable_access '(' argument_expression_list ')'
  121 list_new: • '[' list_items ']'
  125 dict_new: • '{' dict_items '}'

    NUMERICO       shift, and go to state 36
    CADENA         shift, and go to state 37
    IDENTIFICADOR  shift, and go to state 38
    VAR_ARGS       shift, and go to state 39
    FUNCION        shift, and go to state 40
    VERDADERO      shift, and go to state 41
    FALSO          shift, and go to state 42
    NULO           shift, and go to state 43
    '+'            shift, and go to state 44
    '-'            shift, and go to state 45
    '!'            shift, and go to state 46
    '('            shift, and go to state 47
    '['            shift, and go to state 48
    '{'            shift, and go to state 49

    constant_expression        go to state 50
    primary_expression         go to state 51
    unary_expression           go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_not_expression     go to state 57
    logical_and_expression     go to state 58
    logical_or_expression      go to state 59
    ternary_expression         go to state 60
    concat_expression          go to state 61
    expression                 go to state 69
    incdec_statement           go to state 63
    variable_access            go to state 64
    field_designator           go to state 22
    function_anonymous         go to state 65
    function_call              go to state 66
    list_new                   go to state 67
    dict_new                   go to state 68


State 6

   50 statement_list: • statement statement_list
   51               | • statement
   52               | • error statement_list
   53 statement: • declaration
   54          | • global_declaration
   55          | • selection_statement
   56          | • iteration_statement
   57          | • jump_statement
   58          | • function_definition
   59          | • function_call
   60          | • incdec_statement
   61          | • jump_loop
   62          | • goto_etiqueta
   63          | • clase_declaracion
   64 incdec_statement: • variable_access INCREMENTO
   65                 | • variable_access DECREMENTO
   66 variable_access: • IDENTIFICADOR
   67                | • field_designator
   68                | • function_call
   69 field_designator: • variable_access ATRIBUTO IDENTIFICADOR
   70                 | • variable_access '[' expression ']'
   71 global_declaration: • GLOBAL declaration
   72                   | • GLOBAL function_definition
   73 declaration: • variable_access '=' expression
   74            | • variable_access CONCATENAR_IGUAL expression
   75            | • variable_access MAS_IGUAL expression
   76            | • variable_access MENOS_IGUAL expression
   77            | • variable_access POR_IGUAL expression
   78            | • variable_access ENTRE_IGUAL expression
   79            | • variable_access MODULO_IGUAL expression
   80            | • parameter_list '=' argument_expression_list
   81            | • variable_access '[' expression ']' '=' expression
   89 selection_statement: • SI expression statement_list FIN
   90                    | • SI expression statement_list SINO statement_list FIN
   91                    | • SI expression statement_list osi_statements FIN
   92                    | • ELEGIR expression labeled_statements FIN
   98 iteration_statement: • MIENTRAS expression statement_list FIN
   99                    | • REPETIR statement_list HASTA expression
   99                    | REPETIR • statement_list HASTA expression
  100                    | • DESDE '(' declaration ';' expression ';' statement ')' statement_list FIN
  101                    | • PARA IDENTIFICADOR EN RANGO '(' expression ')' statement_list FIN
  102                    | • PARA IDENTIFICADOR EN RANGO '(' expression ',' expression ')' statement_list FIN
  103                    | • PARA IDENTIFICADOR EN RANGO '(' expression ',' expression ',' expression ')' statement_list FIN
  104 goto_etiqueta: • IDENTIFICADOR ':'
  105 jump_statement: • RETORNO expression
  106               | • RETORNO argument_expression_list
  107               | • IR IDENTIFICADOR
  108 jump_loop: • ROMPER
  109          | • CONTINUAR
  110 function_definition: • FUNCION IDENTIFICADOR '(' parameter_list ')' statement_list FIN
  112 function_call: • variable_access '(' argument_expression_list ')'
  116 parameter_list: ε •  ['=', ',']
  117               | • IDENTIFICADOR
  118               | • VAR_ARGS
  119               | • parameter_list ',' IDENTIFICADOR
  120               | • parameter_list ',' VAR_ARGS
  146 clase_declaracion: • CLASE IDENTIFICADOR clase_sentencias FIN

    error          shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    VAR_ARGS       shift, and go to state 3
    SI             shift, and go to state 4
    MIENTRAS       shift, and go to state 5
    REPETIR        shift, and go to state 6
    ROMPER         shift, and go to state 7
    CONTINUAR      shift, and go to state 8
    FUNCION        shift, and go to state 9
    DESDE          shift, and go to state 10
    RETORNO        shift, and go to state 11
    ELEGIR         shift, and go to state 12
    PARA           shift, and go to state 13
    IR             shift, and go to state 14
    GLOBAL         shift, and go to state 15
    CLASE          shift, and go to state 16

    '='  reduce using rule 116 (parameter_list)
    ','  reduce using rule 116 (parameter_list)

    statement_list       go to state 70
    statement            go to state 19
    incdec_statement     go to state 20
    variable_access      go to state 21
    field_designator     go to state 22
    global_declaration   go to state 23
    declaration          go to state 24
    selection_statement  go to state 25
    iteration_statement  go to state 26
    goto_etiqueta        go to state 27
    jump_statement       go to state 28
    jump_loop            go to state 29
    function_definition  go to state 30
    function_call        go to state 31
    parameter_list       go to state 32
    clase_declaracion    go to state 33


State 7

  108 jump_loop: ROMPER •

    $default  reduce using rule 108 (jump_loop)


State 8

  109 jump_loop: CONTINUAR •
